Title: fix on large screens to not overlap

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -161,6 +161,7 @@ body {
 	font-family: 'Yellowtail', cursive;
 	z-index: 9999;
 	left: 0;
+	max-height: 75px;
 	right: 0;
 	text-align: center;
 	background: rgba(255,255,255,.8);
